# reservoircogs

./: CMakeLists.txt  NETWORK_README.md  PROJECT_README.md  README.md  requirements-minimal.txt  test_playground.py
.github/: IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PROJECT.md  NETWORK_README.md  PROJECT_CONFIG.yml  PROJECT_ROADMAP.md  README.md  actions-setup-steps.md  firewall-allowlist.md  network-diagnostic.sh  test-network.py
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  documentation.yml  feature-future.yml  feature-technical.yml
.github/workflows/: project-automation.yml  setup-project.yml  test.yml
cmake/: ReservoirCogsConfig.cmake.in
docs/: emotion_framework.md  getting_started.md
docs/user_guide/: atomspace_integration.md  index.md  playground.md
examples/: bpj_integration_example.py  bpje_integration_example.py  bseries_ridge_regression_example.py  differential_emotion_example.py  julia_de_example.py  psystems_example.py  test_bseries_integration.py
examples/atomspace/: CMakeLists.txt  README.md  basic_esn_atomspace.cpp  emotion_atomspace_example.cpp  python_cpp_bridge.py
opencog/: CMakeLists.txt
opencog/reservoir/: CMakeLists.txt
opencog/reservoir/algorithms/: CMakeLists.txt  PSystems.h  ReservoirAlgorithms.cc  ReservoirAlgorithms.h
opencog/reservoir/nodes/: CMakeLists.txt  EmotionNode.cc  EmotionNode.h  ReservoirNode.cc  ReservoirNode.h
opencog/reservoir/types/: CMakeLists.txt  reservoir_types.script
playground/: README.md  index.html
playground/css/: playground.css
playground/js/: playground.js
reservoirpy/: __init__.py  bpj_integration.py
reservoirpy/compat/: __init__.py  bseries_regression.py  julia_de.py
reservoirpy/compat/tests/: test_bseries_regression.py  test_julia_de.py  test_rooted_tree_enumeration_fix.py
reservoirpy/experimental/: __init__.py  psystems.py
reservoirpy/experimental/tests/: test_psystems.py
reservoirpy/nodes/: __init__.py
reservoirpy/nodes/emotions/: __init__.py  differential_emotion.py  emotion_reservoir.py
scripts/: setup-project.sh
tests/: CMakeLists.txt  test_basic_structure.py  test_bpj_integration.py  test_bpje_integration.py  test_emotion_framework.py  test_reservoir_node.cc  validate_fundamental_linkage.py
